--- a/style.css
+++ b/style.css
@@ -164,3 +164,20 @@ nav ul li a {
   }
 }
 
+
+#typing-text {
+  font-size: 18px;
+  color: #38bdf8;
+  font-weight: bold;
+  border-right: 2px solid #38bdf8;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: blink-caret 0.75s step-end infinite;
+}
+
+@keyframes blink-caret {
+  50% {
+    border-color: transparent;
+  }
+}
